chore: ZGZ crashes on AOT